Delete default loan and get my loans endpoints
