# backend/go/docs/swagger.json
@@ -54,6 +54,49 @@
                 }
             }
         },
+      "/bank/delete_loan": {
+        "delete": {
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "bank"
+          ],
+          "summary": "Delete Default Loans",
+          "parameters": [
+            {
+              "type": "string",
+              "description": "Loan ID",
+              "name": "_id",
+              "in": "query",
+              "required": true
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            },
+            "401": {
+              "description": "Unauthorized",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            }
+          }
+        }
+      },
         "/bank/get_credit_terms": {
             "get": {
                 "description": "If defined return. Credit term where limit \u003e= in param, rate \u003c= in param, rating \u003c= in param.",
@@ -118,9 +161,90 @@
                 }
             }
         },
+      "/bank/get_loans": {
+        "get": {
+          "description": "Return all loans connected with userId",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "bank"
+          ],
+          "summary": "Get Users Loans",
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            },
+            "401": {
+              "description": "Unauthorized",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            }
+          }
+        }
+      },
+      "/bank/repay_loan": {
+        "post": {
+          "description": "Pay off the loan partially or in full. Payload example {\"loanId\":\"674ca2524dfa3a351adbf424\", \"Amount\":122}",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "bank"
+          ],
+          "summary": "Repay loan",
+          "parameters": [
+            {
+              "description": "Repay loan payload",
+              "name": "repayLoanPayload",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/repayLoanPayload"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            },
+            "401": {
+              "description": "Unauthorized",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            }
+          }
+        }
+      },
       "/bank/take_credit": {
         "post": {
-          "description": "Get credit in bank. Payload example",
+          "description": "Get credit in bank. Payload example {\"buildingId\":\"670fd64c211de59e1bb8a314\", \"Amount\":50, \"Rate\": 0.5, \"Rating\": -1000000}",
           "consumes": [
             "application/json"
           ],
@@ -139,6 +263,52 @@
               "required": true,
               "schema": {
                 "$ref": "#/definitions/takeCreditPayload"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            },
+            "401": {
+              "description": "Unauthorized",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "$ref": "#/definitions/jsonResult"
+              }
+            }
+          }
+        }
+      },
+      "/bank/take_state_credit": {
+        "post": {
+          "description": "Get credit from state. Payload example {\"buildingId\":\"670fd64c211de59e1bb8a314\", \"Amount\": 5000}",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "bank"
+          ],
+          "summary": "Take state credit",
+          "parameters": [
+            {
+              "description": "Get state credit payload",
+              "name": "takeStateCreditPayload",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/takeStateCreditPayload"
               }
             }
           ],
@@ -1910,6 +2080,7 @@
           "borrowedFromState",
           "borrowedLimit",
           "loansAmount",
+          "loansAmountNewUsers",
           "loansLimit"
         ],
         "properties": {
@@ -1920,6 +2091,9 @@
             "type": "number"
           },
           "loansAmount": {
+            "type": "number"
+          },
+          "loansAmountNewUsers": {
             "type": "number"
           },
           "loansLimit": {
@@ -2793,6 +2967,21 @@
                 }
             }
         },
+      "repayLoanPayload": {
+        "type": "object",
+        "required": [
+          "amount",
+          "loanId"
+        ],
+        "properties": {
+          "amount": {
+            "type": "number"
+          },
+          "loanId": {
+            "type": "string"
+          }
+        }
+      },
         "resourceAmount": {
             "type": "object",
             "properties": {
@@ -3024,6 +3213,21 @@
           }
         }
       },
+      "takeStateCreditPayload": {
+        "type": "object",
+        "required": [
+          "amount",
+          "buildingId"
+        ],
+        "properties": {
+          "amount": {
+            "type": "number"
+          },
+          "buildingId": {
+            "type": "string"
+          }
+        }
+      },
         "time.Duration": {
             "type": "integer",
             "enum": [
@@ -3062,6 +3266,9 @@
                 "characteristics": {
                     "$ref": "#/definitions/characteristics"
                 },
+              "created": {
+                "type": "string"
+              },
               "creditRating": {
                 "type": "number"
               },
