# backend/go/packages/controllers/bank.go
@@ -217,3 +217,65 @@ func RepayLoan(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, gin.H{"code": -18})
 }
+
+// GetMyLoans
+//
+//	@Summary		Get Users Loans
+//	@Description	Return all loans connected with userId
+//	@Tags			bank
+//	@Accept			json
+//	@Produce		json
+//	@Success		200				    	{object}	JSONResult
+//	@Failure		401				    	{object}	JSONResult
+//	@Failure		500			   			{object}	JSONResult
+//	@Router			/bank/get_loans [get]
+func GetMyLoans(c *gin.Context) {
+	userId, err := include.GetUserIdFromContext(c)
+	if err != nil {
+		return
+	}
+
+	loans, err := models.GetMyLoans(db.M, userId)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"code": 100001, "text": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{"code": 0, "data": loans})
+}
+
+// DeleteDefaultLoans
+//
+//	@Summary	Delete Default Loans
+//	@Tags		bank
+//	@Accept		json
+//	@Produce	json
+//	@Param		_id	query		string	true	"Loan ID"
+//	@Success	200	{object}	JSONResult
+//	@Failure	401	{object}	JSONResult
+//	@Failure	500	{object}	JSONResult
+//	@Router		/bank/delete_loan [delete]
+func DeleteDefaultLoans(c *gin.Context) {
+	userId, err := include.GetUserIdFromContext(c)
+	if err != nil {
+		return
+	}
+
+	loanId, err := include.StrToPrimObjId(c, c.Query("_id"))
+	if err != nil {
+		return
+	}
+	err = models.DeleteDefaultLoans(db.M, userId, loanId)
+	if err != nil {
+		if strings.Contains(err.Error(), "you can't delete someone else's loan") {
+			c.JSON(http.StatusOK, gin.H{"code": 47, "text": err.Error()})
+		} else if strings.Contains(err.Error(), "are you crazy? this loan is not default") {
+			c.JSON(http.StatusOK, gin.H{"code": 48, "text": err.Error()})
+		} else {
+			c.JSON(http.StatusInternalServerError, gin.H{"code": 100001, "text": err.Error()})
+		}
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"code": -12})
+
+}
